test/fail/generic-type-too-many.grace
type Name<T> = T

Name<type {}, type {}>
